--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,27 @@
+body{
+  font: 20px Arial, sans-serif;
+}
+
 .navbar{
-  background-color: #298A08;
+  background-color: #088a4f;
 }
 
 .quem-somos{
   background-color: #8181F7;
+  color: white;
 }
 
 .margin{
- padding: 30px;
-  
+ padding-bottom: 50px;
+padding-top: 10px;
+}
+
+.parceiros{
+  background-color: rgb(187, 202, 194);
+  color: white;
+}
+
+.bg-footer{
+  background-color: black;
+  color: white;
 }
